deferred 구현 할만큼 했는데 자주색 화면만 나옴..
- geometry, lighting pass를 위한 shader program 생성 (geometry.{vert, frag}, lighting.{vert, frag})
- g-buffer 생성
- axis는 일시적으로 comment 처리함. (얘만 따로 simple shader 사용하는 걸 정리하기 복잡해서)
- 호랑이 두번째 세트(16마리) 일시적으로 comment 처리함.

--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj
@@ -163,6 +163,10 @@
     <ClInclude Include="Shaders\LoadShaders.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\geometry.frag" />
+    <None Include="Shaders\geometry.vert" />
+    <None Include="Shaders\lighting.frag" />
+    <None Include="Shaders\lighting.vert" />
     <None Include="Shaders\Phong_Tx.frag" />
     <None Include="Shaders\Phong_Tx.vert" />
     <None Include="Shaders\simple.frag" />
