--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj
@@ -171,6 +171,8 @@
     <None Include="Shaders\Phong_Tx.vert" />
     <None Include="Shaders\simple.frag" />
     <None Include="Shaders\simple.vert" />
+    <None Include="Shaders\stencil.frag" />
+    <None Include="Shaders\stencil.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
