--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj.filters
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj.filters
@@ -55,5 +55,11 @@
     <None Include="Shaders\lighting.vert">
       <Filter>리소스 파일</Filter>
     </None>
+    <None Include="Shaders\stencil.frag">
+      <Filter>리소스 파일</Filter>
+    </None>
+    <None Include="Shaders\stencil.vert">
+      <Filter>리소스 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
