--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Tiger_Texture_PS_GLSL.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Tiger_Texture_PS_GLSL.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="define.h" />
     <ClInclude Include="My_Shading.h" />
     <ClInclude Include="Shaders\LoadShaders.h" />
   </ItemGroup>
