--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.filters
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.filters
@@ -29,18 +29,15 @@
     <ClInclude Include="Shaders\LoadShaders.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
+    <ClInclude Include="define.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Phong_Tx.frag">
       <Filter>리소스 파일</Filter>
     </None>
     <None Include="Shaders\Phong_Tx.vert">
-      <Filter>리소스 파일</Filter>
-    </None>
-    <None Include="Shaders\simple.frag">
-      <Filter>리소스 파일</Filter>
-    </None>
-    <None Include="Shaders\simple.vert">
       <Filter>리소스 파일</Filter>
     </None>
     <None Include="Shaders\geometry.frag">
