--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.vcxproj
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.vcxproj
@@ -23,6 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Tiger_Texture_PS_GLSL</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Method4</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -155,8 +156,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Method4.cpp" />
     <ClCompile Include="Shaders\LoadShaders.cpp" />
-    <ClCompile Include="Tiger_Texture_PS_GLSL.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="define.h" />
@@ -164,16 +165,14 @@
     <ClInclude Include="Shaders\LoadShaders.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\geometry.frag" />
-    <None Include="Shaders\geometry.vert" />
-    <None Include="Shaders\lighting.frag" />
-    <None Include="Shaders\lighting.vert" />
-    <None Include="Shaders\Phong_Tx.frag" />
-    <None Include="Shaders\Phong_Tx.vert" />
-    <None Include="Shaders\simple.frag" />
-    <None Include="Shaders\simple.vert" />
-    <None Include="Shaders\stencil.frag" />
-    <None Include="Shaders\stencil.vert" />
+    <None Include="Shaders\method4\geometry.frag" />
+    <None Include="Shaders\method4\geometry.vert" />
+    <None Include="Shaders\method4\lighting.frag" />
+    <None Include="Shaders\method4\lighting.vert" />
+    <None Include="Shaders\method4\Phong_Tx.frag" />
+    <None Include="Shaders\method4\Phong_Tx.vert" />
+    <None Include="Shaders\method4\stencil.frag" />
+    <None Include="Shaders\method4\stencil.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
