--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.vcxproj.filters
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.vcxproj.filters
@@ -12,7 +12,7 @@
     <ClInclude Include="Shaders\LoadShaders.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="My_Shading.h">
+    <ClInclude Include="My_Shading_Method4.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
