method4에 emissive + global ambient 추가

--- a/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.vcxproj
+++ b/5.4.Tiger_Texture_PS_GLSL_2/Tiger_Texture_PS_GLSL/Method4.vcxproj
@@ -166,6 +166,8 @@
   <ItemGroup>
     <None Include="Shaders\method4\geometry.frag" />
     <None Include="Shaders\method4\geometry.vert" />
+    <None Include="Shaders\method4\global.frag" />
+    <None Include="Shaders\method4\global.vert" />
     <None Include="Shaders\method4\lighting.frag" />
     <None Include="Shaders\method4\lighting.vert" />
     <None Include="Shaders\method4\stencil.frag" />
